prevent horizontal scroll

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,5 +1,8 @@
 @import './colors.scss';
 
+.application-container{
+  overflow-x: hidden;
+}
 * {
   margin: 0;
   padding: 0;
